# xyn

./: LICENSE  README.md  pyproject.toml
src/xyn/: main.py
