[project]
name = "xyn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hilal Mufti", email = "hmufti@cs.washington.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "mlx>=0.25.2",
]

[project.scripts]
xyn = "xyn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
